<resources>
    <string name="app_name">CougarCalendar</string>
    <string name="classes">Classes</string>
    <string-array name="names">
        <item>World History</item>
        <item>World History AP</item>
        <item>US History</item>
        <item>US History AP  </item>
        <item>American Government</item>
        <item>Government and Politics AP</item>
        <item>Psychology</item>
        <item>Economics  </item>
        <item>Macroeconomics AP</item>
        <item>Psychology AP</item>
        <item>ELD Language Arts 3</item>
        <item>English 1 </item>
        <item>English 1A</item>
        <item>English 2</item>
        <item>English 2A</item>
        <item>English 3</item>
        <item>ERWC</item>
        <item>Genres of Composition</item>
        <item>English Language and Composition AP</item>
        <item>English Literature AP</item>
        <item>CCSS 1</item>
        <item>CCSS 2</item>
        <item>Geometry</item>
        <item>Alebgra 2  </item>
        <item>Math Analysis</item>
        <item>Calculus AB</item>
        <item>Calculus BC</item>
        <item>Intro to CS</item>
        <item>Computer Science AP</item>
        <item>Principles of Computer Science</item>
        <item>Math Analysis</item>
        <item>Calculus AB</item>
        <item>Calculus BC</item>
        <item>Intro to CS</item>
    </string-array>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
