<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp"
        android:autofillHints="@string/hint_email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentalStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-3dp"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:id = "@+id/changePass"
        style = "?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background = "@color/colorPrimaryDark"
        android:text = "@string/btn_change"
        android:textColor = "@android:color/white"
        android:textStyle = "bold"
        tools:layout_editor_absoulteY = "211dp"
        tools:layout_editor_absoluteX = "199dp"
        android:layout_above = "@+id/remove"
        android:layout_centerHorizontal = "true" />

    <ProgressBar
        android:id = "@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY = "0dp"
        tools:layout_editor_absoluteX = "0dp"/>

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="199dp" />
        />

    <Button
        android:id = "@+id/change_password_button"
        style = "?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text = "@string/change_password"
        android:textStyle = "bold"
        tools:layout_editor_absoluteX = "42dp"
        tools:layout_editor_absoluteY = "312dp"
        android:layout_above = "@+id/remove_user_button"
        android:layout_alignStart = "@+id/remove_user_button"
        android:layout_alignLeft = "@+id/remove_user_button"/>

    <Button
        android:id = "@+id/remove_user_button"
        style = "?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text = "@string/remove_user"
        android:textStyle = "bold"
        tools:layout_editor_absoluteX = "42dp"
        tools:layout_editor_absoluteY = "40dp"
        android:layout_above = "@+id/sign_out"
        android:layout_alignStart = "@+id/sign_out"
        android:layout_alignLeft = "@+id/sign_out"/>

    <Button
        android:id = "@+id/sign_out"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background = "@color/colorPrimary"
        android:text = "@string/btn_sign_out"
        android:textColor = "@android:color/white"
        android:textStyle = "bold"
        tools:layout_editor_absoluteX = "42dp"
        tools:layout_editor_absoluteY = "456dp"
        android:layout_alignParentBottom = "true"
        android:layout_centerHorizontal = "true"/>


    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:hint="Email ID"
        android:paddingTop="10dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Cougar Calendar"
            android:textColor="@color/white"
            android:textScaleX="1"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>



</RelativeLayout>

